// [START declaration]
syntax = "proto3";
package proto;
// [END declaration]

// [START java_declaration]
option java_package = "org.tont.proto";
option java_outer_classname = "LoginResponse";
// [END java_declaration]

// [START csharp_declaration]
option csharp_namespace = "Google.Protobuf.ToNT.LoginResponse";
// [END csharp_declaration]

// [START messages code 100]
message LoginResponseEntity {
	bool success = 1;
	string message = 2;
	
	int32 pid = 3;
	string token = 4;
	string nickname = 5;
	bool isnamed = 6;
	int32 gold = 7;
	int32 curScene = 8;
	int32 curPosX = 9;
	int32 curPosY = 10;
	int32 hp = 11;
}
// [END messages]